--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,10 +1,8 @@
 pipeline {
-    agent {
-        docker {
-            image 'maven:3-alpine'
-            args '-v /root/.m2:/root/.m2'
-        }
-    }
+    agent any
+    tools {
+        maven "Maven"
+        jdk "JDK 8"
     stages {
         stage('Build') {
             steps {
@@ -13,7 +11,7 @@ pipeline {
         }
         stage('Test') {
             steps {
-                sh 'mvn test1'
+                sh 'mvn test'
             }
             post {
                 always {
